--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@lit-labs/nextjs": "^0.2.4",
+    "@lit-labs/ssr": "^3.3.1",
+    "@lit-labs/ssr-client": "^1.1.7",
+    "@lit/context": "^1.1.6",
+    "lit": "^3.3.1",
+    "next": "15.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.6"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "@types/react-dom": "^19",
+    "prettier": "3.6.2",
+    "typescript": "^5"
   }
 }
