--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,10 @@
     "plugins": [
       {
         "name": "next"
+      },
+      {
+        "name": "ts-lit-plugin",
+        "strict": true
       }
     ],
     "paths": {
