Created comparison pages

--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@lit-labs/ssr": "^3.3.1",
     "@lit-labs/ssr-client": "^1.1.7",
     "@lit/context": "^1.1.6",
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^15.5.6",
+    "@types/mdx": "^2.0.13",
     "lit": "^3.3.1",
     "next": "15.5.6",
     "react": "19.1.0",
